[gd_scene format=3 uid="uid://ccqoreueuxdb7"]

[ext_resource type="Script" uid="uid://c1g57034r2c0" path="res://HUD.gd" id="1"]

[sub_resource type="InputEventAction" id="InputEventAction_fopy7"]
action = &"start_game"

[sub_resource type="Shortcut" id="4"]
events = [SubResource("InputEventAction_fopy7")]

[node name="HUD" type="CanvasLayer" unique_id=1632916447]
script = ExtResource("1")

[node name="ScoreLabel" type="Label" parent="." unique_id=1213769816]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="." unique_id=1564968957]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -79.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Slime attack"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="." unique_id=1634501733]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -200.0
offset_right = 90.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
shortcut = SubResource("4")
text = "Inicio"

[node name="MessageTimer" type="Timer" parent="." unique_id=879770546]
one_shot = true

[node name="HealthLabel" type="Label" parent="." unique_id=236033997]
custom_minimum_size = Vector2(10, 50)
offset_right = 40.0
offset_bottom = 50.0

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
